Updated new components

--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -474,7 +474,7 @@
                                             <div class="slds-truncate" title="Section Name">Section Name</div>
                                         </th>
                                         <th class="" scope="col">
-                                            <div class="slds-truncate" title="Average Rating">Average Rating (Weightage)</div>
+                                            <div class="slds-truncate" title="Average Rating [Weightage]">Average Rating [Weightage]</div>
                                         </th>
                                     </tr>
                                 </thead>
@@ -488,7 +488,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Technical Acumen">
-                                                <div class="slds-truncate">{wrapData.TechSkillData} ({wrapData.AvgTechSkillData})</div>
+                                                <div class="slds-truncate">{wrapData.TechSkillData} [{wrapData.AvgTechSkillData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -498,7 +498,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Professional Skills">
-                                                <div class="slds-truncate">{wrapData.ProfSkillData} ({wrapData.AvgProfSkillData})</div>
+                                                <div class="slds-truncate">{wrapData.ProfSkillData} [{wrapData.AvgProfSkillData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -508,7 +508,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Strategic Impact">
-                                                <div class="slds-truncate">{wrapData.StrategicData} ({wrapData.AvgStrategicData})</div>
+                                                <div class="slds-truncate">{wrapData.StrategicData} [{wrapData.AvgStrategicData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -518,7 +518,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Goals & Results">
-                                                <div class="slds-truncate">{wrapData.GoalResultData} ({wrapData.AvgGoalResultData})</div>
+                                                <div class="slds-truncate">{wrapData.GoalResultData} [{wrapData.AvgGoalResultData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -543,7 +543,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Technical Acumen">
-                                                <div class="slds-truncate">{wrapData.TechSkillData} ({wrapData.AvgTechSkillData})</div>
+                                                <div class="slds-truncate">{wrapData.TechSkillData} [{wrapData.AvgTechSkillData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -553,7 +553,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Professional Skills">
-                                                <div class="slds-truncate">{wrapData.ProfSkillData} ({wrapData.AvgProfSkillData})</div>
+                                                <div class="slds-truncate">{wrapData.ProfSkillData} [{wrapData.AvgProfSkillData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -563,7 +563,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Strategic Impact">
-                                                <div class="slds-truncate">{wrapData.StrategicData} ({wrapData.AvgStrategicData})</div>
+                                                <div class="slds-truncate">{wrapData.StrategicData} [{wrapData.AvgStrategicData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -573,7 +573,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Goals & Results">
-                                                <div class="slds-truncate">{wrapData.GoalResultData} ({wrapData.AvgGoalResultData})</div>
+                                                <div class="slds-truncate">{wrapData.GoalResultData} [{wrapData.AvgGoalResultData}]</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
