Updated code for PM_Def_154

--- a/force-app/main/default/lwc/pulsetable/pulsetable.html
+++ b/force-app/main/default/lwc/pulsetable/pulsetable.html
@@ -35,7 +35,7 @@
             <div class="" style="width:100px;" title="Overall Rating">Overall Rating</div> <!-- smaske : UAT_014 : removed class="slds-truncate"  -->
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="" style="width:100px;" title="Comments">Overall Comments</div>
+            <div class="" style="width:100px;" title="Overall Comments">Overall Comments</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
             <div class="slds-truncate" style="width:100px;" title="Status">Status</div>
