--- a/force-app/main/default/lwc/pmkrafullview/pmkrafullview.html
+++ b/force-app/main/default/lwc/pmkrafullview/pmkrafullview.html
@@ -375,7 +375,7 @@
 				<table class="slds-table_bordered slds-table_cell-buffer slds-table_col-bordered">
 					<thead>
 						<th><strong>Section Name</strong></th>
-						<th colspan={contacts.length} style="text-align:center;"><b>Average Rating (Weightage)</b></th>
+						<th colspan={contacts.length} style="text-align:center;"><b>Average Rating [Weightage]</b></th>
 						<tr>
 						</tr>
 						<tr>
