--- a/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
+++ b/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
@@ -8,9 +8,8 @@
 			</div>
 		<div class="tableFixHead">
 			<p style="font-size: 1.0em;">
-				Note: The "Request to" dropdown will auto update by removing the options each time an option has been selected to
-				send the request to. However, you can still track the KRA feedback requests sent, by clicking on the action button
-				available in the Mentee's KRA record
+				 <strong>Note:</strong> The "Request to" dropdown will auto-update by removing the options each time an option has been selected to send the request to. 
+				However, you can still track the KRA feedback requests sent, by clicking on the action button available in the Mentee's KRA record.
 			</p><br>
 
 
