Deploying changes for PM_Def_180

--- a/force-app/main/default/lwc/viewPMRequests/viewPMRequests.html
+++ b/force-app/main/default/lwc/viewPMRequests/viewPMRequests.html
@@ -17,7 +17,7 @@
             <div class="slds-truncate" title="Project Manager/Other">Project Manager/Other</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="KRA Status">KRA Status</div>
+            <div class="slds-truncate" title="KRA Request Status">KRA Request Status</div>
           </th>
           <template if:true={disablecolumn}>
           <th class="slds-border_right tableheading recallColumn" scope="col">
