--- a/force-app/main/default/lwc/viewPMRequests/viewPMRequests.html
+++ b/force-app/main/default/lwc/viewPMRequests/viewPMRequests.html
@@ -95,7 +95,7 @@
 														class="slds-text-heading_medium slds-hyphenate">Recall Reason</h2>
 												</header>
 												<div class="slds-modal__content slds-p-around_medium"  id="modal-content-id-1">
-													<lightning-textarea class="rreason" variant="label-stacked" required label="Enter Recall Reason" value={comment} onchange={handleCommentChange}></lightning-textarea>
+													<lightning-textarea max-length="255" field-level-help="Recall reason should not be more than 255 characters" class="rreason" variant="label-stacked" required label="Enter Recall Reason" value={comment} onchange={handleCommentChange}></lightning-textarea>
                           
                           <p><b>Note:</b> Submitting a recall for a feedback request will result in the cancellation of the request.</p>
 
@@ -103,7 +103,7 @@
 												</div>
 												<footer class="slds-modal__footer">
 													<!-- smaske : PM_Def_098 : Replacing html button with lwc button -->
-                          <lightning-button label="Close" title="Close" onclick={hideModalBox} class="slds-m-left_x-medium"></lightning-button>&nbsp;&nbsp;
+                          <lightning-button variant="destructive" label="Cancel" title="Cancel" onclick={hideModalBox} class="slds-m-left_x-medium"></lightning-button>&nbsp;&nbsp;
 													<lightning-button variant="brand" label="Submit" title="Submit" onclick={handleRejectionSubmission} ></lightning-button>
 												</footer>
 											</div>
