--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -164,12 +164,13 @@
             <footer class="section1">
                 <lightning-button variant="" label="Next"  onclick={handleNextAction} class="slds-var-m-left_x-small"></lightning-button>
             </footer>
+            <br>
         </template>
         <!-- REVIEWER DETAILS SECTION-->
 
         <!-- TECHNICAL ACUMEN SECTION -->
         <template lwc:if={showTechnicalAcumen}>
-            <div class="pointerTableContainer2">
+            <!--<div class="pointerTableContainer2"> -->
                 <div class="section3" data-technical-acumen >
                     <lightning-layout class="slds-theme_shade">
                         <table class="slds-table slds-table_bordered slds-table_col-bordered slds-table_cell-buffer slds-table_fixed-layout">
@@ -239,13 +240,13 @@
                     </lightning-layout>
                 </div>
 
-            </div>
+           <!-- </div> -->
         </template>
         <!-- TECHNICAL ACUMEN SECTION -->
 
         <!-- PROFESSIONAL SKILLS SECTION -->
         <template lwc:if={showProfessionalSkills}>
-            <div class="pointerTableContainer2">
+            <!-- <div class="pointerTableContainer2"> -->
                 <div class="section3" data-professional-skills>
                     <lightning-layout class="slds-theme_shade">
                         <table class="slds-table slds-table_bordered slds-table_col-bordered slds-table_cell-buffer slds-table_fixed-layout">
@@ -311,13 +312,13 @@
                     </lightning-layout>
                 </div>
 
-            </div>
+            <!-- </div> -->
         </template>
         <!-- PROFESSIONAL SKILLS SECTION -->
 
         <!-- STRATEGIC IMPACT SECTION -->
         <template lwc:if={showStrategicImpact}>
-            <div class="pointerTableContainer2">
+            <!-- <div class="pointerTableContainer2"> -->
                 <div class="section3" data-strategic-impact>
                     <lightning-layout  class="slds-theme_shade">
                         <table class="slds-table slds-table_bordered slds-table_col-bordered slds-table_cell-buffer slds-table_fixed-layout">
@@ -382,13 +383,13 @@
                     </lightning-layout>
                 </div>
 
-            </div>
+            <!-- </div> -->
         </template>
         <!-- STRATEGIC IMPACT SECTION -->
 
         <!-- GOALS AND RESULTS SECTION -->
         <template lwc:if={showGoalsResults}>
-            <div class="pointerTableContainer2">
+            <!-- <div class="pointerTableContainer2"> -->
                 
                 <div class="section3" data-goals-results>
                     <lightning-layout class="slds-theme_shade">
@@ -454,7 +455,7 @@
                     </lightning-layout>
                 </div>
 
-            </div>
+            <!-- </div> -->
         </template>
         <!-- GOALS AND RESULTS SECTION -->
 
