Added note in both components

--- a/force-app/main/default/lwc/myMetrics/myMetrics.html
+++ b/force-app/main/default/lwc/myMetrics/myMetrics.html
@@ -47,6 +47,12 @@
 						</div>
 					</lightning-layout-item>
 				</lightning-layout>
+				<br />
+				<lightning-layout multiple-rows>
+					<lightning-layout-item size="12">
+						<p><b>Note: FY filter is not applicable to "My Project Assignments" tab</b></p>
+					</lightning-layout-item>
+				</lightning-layout>
 			</div>
 
 	</lightning-card>
