--- a/force-app/main/default/lwc/myteam/myteam.html
+++ b/force-app/main/default/lwc/myteam/myteam.html
@@ -102,6 +102,12 @@
 						</div>
 					</lightning-layout-item>
 				</lightning-layout>
+				<br />
+				<lightning-layout multiple-rows>
+					<lightning-layout-item size="12">
+						<p><b>Note: FY filter is not applicable to "Project Assignements" tab</b></p>
+					</lightning-layout-item>
+				</lightning-layout>
 			</div>
 
 		</lightning-card>
