Notifying_Project_Manager_Others_On_their_Declining_The_Feedback_Request sendEmailToMentor myMetrics myteam

--- a/force-app/main/default/lwc/myMetrics/myMetrics.html
+++ b/force-app/main/default/lwc/myMetrics/myMetrics.html
@@ -50,7 +50,7 @@
 				<br />
 				<lightning-layout multiple-rows>
 					<lightning-layout-item size="12">
-						<p><b>Note: FY filter is not applicable to "My Project Assignments" tab</b></p>
+						<p><b>Note: FY filter is not applicable to "My Project Assignments".</b></p>
 					</lightning-layout-item>
 				</lightning-layout>
 			</div>
