--- a/force-app/main/default/lwc/myteam/myteam.html
+++ b/force-app/main/default/lwc/myteam/myteam.html
@@ -105,7 +105,7 @@
 				<br />
 				<lightning-layout multiple-rows>
 					<lightning-layout-item size="12">
-						<p><b>Note: FY filter is not applicable to "Project Assignements" tab</b></p>
+						<p><b>Note: FY filter is not applicable to "Project Assignments".</b></p>
 					</lightning-layout-item>
 				</lightning-layout>
 			</div>
