--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -125,7 +125,7 @@
 									            	 </button>
 														<h2 id="modal-heading-02" class="slds-text-heading_medium slds-hyphenate">Quarterly KRA Edit</h2>
 													</header>																					
-													<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
+													<div class="slds-modal__content slds-p-around_medium slds-p-bottom_none slds-p-right_small slds-p-left_small" id="modal-content-id-2">
 																											
 														<c-quarterlykraedit mode={mode} selected-project-id ={selectedProjectId} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId} tab={tab} onmycustomevent={handleCustomEvent} onclose ={hideKRAEditModalBox}> </c-quarterlykraedit>
 													</div>																					
