Description field update

--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -210,7 +210,7 @@
                                             <lightning-record-edit-form record-id={key.Id} object-api-name="PM_Configure__c" density="compact" onsuccess={handleSuccessForPMAnswers} onerror={handleErrors}>
                                                 <div class="fieldsRow">
                                                 <lightning-helptext content={key.Related_Question__r.Question_overview__c} ></lightning-helptext>
-                                                <lightning-input-field disabled={isFieldsDisabled} variant="label-inline" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
+                                                <lightning-input-field disabled={isFieldsDisabled} variant="label-stacked" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
                                             </div>
                                             </lightning-record-edit-form>
                                             
@@ -283,7 +283,7 @@
                                             <lightning-record-edit-form record-id={key.Id} object-api-name="PM_Configure__c" density="compact" onsuccess={handleSuccessForPMAnswers} onerror={handleErrors}>
                                                 <div class="fieldsRow">
                                                 <lightning-helptext content={key.Related_Question__r.Question_overview__c} ></lightning-helptext>
-                                                <lightning-input-field disabled={isFieldsDisabled} variant="label-inline" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
+                                                <lightning-input-field disabled={isFieldsDisabled} variant="label-stacked" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
                                                 </div>
                                             </lightning-record-edit-form>
                                         </td>
@@ -355,7 +355,7 @@
                                             <lightning-record-edit-form record-id={key.Id} object-api-name="PM_Configure__c" density="compact" onsuccess={handleSuccessForPMAnswers} onerror={handleErrors}>
                                                 <div class="fieldsRow">
                                                     <lightning-helptext content={key.Related_Question__r.Question_overview__c}></lightning-helptext>
-                                                    <lightning-input-field disabled={isFieldsDisabled} variant="label-inline" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
+                                                    <lightning-input-field disabled={isFieldsDisabled} variant="label-stacked" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
                                                 </div>
                                             </lightning-record-edit-form>
                                         </td>
@@ -427,7 +427,7 @@
                                             <lightning-record-edit-form record-id={key.Id} object-api-name="PM_Configure__c" density="compact" onsuccess={handleSuccessForPMAnswers} onerror={handleErrors}>
                                                 <div class="fieldsRow">
                                                 <lightning-helptext content={key.Related_Question__r.Question_overview__c} ></lightning-helptext>
-                                                <lightning-input-field disabled={isFieldsDisabled} variant="label-inline" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
+                                                <lightning-input-field disabled={isFieldsDisabled} variant="label-stacked" field-name="Description__c" value={key.Description__c} required></lightning-input-field>
                                             </div>
                                             </lightning-record-edit-form>
                                         </td>
